SET(FishGame_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/../../Source/FishGame)

aux_source_directory(${FishGame_SRC_DIR} SRCS)
add_library (FishGame SHARED ${SRCS})
target_link_libraries(FishGame FishEngine)
target_link_libraries(FishGame glfw)
target_link_libraries(FishGame ${PhysXSDK_LIBRARIES})
target_link_libraries(FishGame ${Boost_LIBRARIES})
if (MSVC)
    target_link_libraries(FishGame glew)
else()
    set_target_properties(FishGame PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
endif()