# aux_source_directory( ${CMAKE_CURRENT_LIST_DIR} SRCS )
FILE(GLOB_RECURSE SRCS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_LIST_DIR}/../../include/FishEngine/*.hpp)

foreach (dir SceneManagement Serialization Asset Math Core Physics Render "Internal" Animation Audio Generated)
    FILE(GLOB_RECURSE SRC ${CMAKE_CURRENT_LIST_DIR}/${dir}/*.cpp)
    SOURCE_GROUP(${dir} FILES ${SRC})
endforeach()

add_library (FishEngine SHARED ${SRCS} ${HEADERS})
target_link_libraries(FishEngine ${Boost_LIBRARIES})
target_link_libraries(FishEngine ${PhysXSDK_LIBRARIES})
target_link_libraries(FishEngine ${FMOD_LIB})
target_link_libraries(FishEngine yaml-cpp)
target_link_libraries(FishEngine folly)
if (MSVC)
    target_link_libraries(FishEngine opengl32.lib)
    target_link_libraries(FishEngine glew)
    add_custom_command(TARGET FishEngine POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:Debug>:${FMOD_DIR}/bin/fmodL64.dll> $<$<NOT:$<CONFIG:Debug>>:${FMOD_DIR}/bin/fmod64.dll> $<TARGET_FILE_DIR:FishEngine>)
else()
    set_target_properties(FishEngine PROPERTIES LINK_FLAGS "-framework OpenGL")
endif()