MACRO(SETUP_TEST EXE_NAME)
	aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
	add_executable (${EXE_NAME} ${SRCS})
	target_compile_options(${EXE_NAME} PUBLIC -std=c++14)
	target_link_libraries(${EXE_NAME} ${Boost_LIBRARIES})
	target_link_libraries(${EXE_NAME} FishEngine)
	#target_link_libraries(${EXE_NAME} FishEditor)

	if (MSVC)
	    target_link_libraries(${EXE_NAME} opengl32.lib)
	    target_link_libraries(${EXE_NAME} glew_s)
	else()
	    set_target_properties(${EXE_NAME} PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
	endif()

	# target_link_libraries(${EXE_NAME} glfw)
	#target_link_libraries(${EXE_NAME} assimp)
	#target_link_libraries(${EXE_NAME} nativefiledialog)
	target_link_libraries(${EXE_NAME} ${PhysXSDK_LIBRARIES})
	target_link_libraries(${EXE_NAME} ${Boost_LIBRARIES})

	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES FOLDER "Tests")
ENDMACRO(SETUP_TEST)

add_subdirectory(./Test)
add_subdirectory(./TestFishGUI)