MACRO(SETUP_TOOL EXE_NAME)
	aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
	add_executable (${EXE_NAME} ${SRCS})
	target_link_libraries(${EXE_NAME} FishEngine)
	target_link_libraries(${EXE_NAME} glfw)
	target_link_libraries(${EXE_NAME} assimp)
	target_link_libraries(${EXE_NAME} ${PhysXSDK_LIBRARIES})
	target_link_libraries(${EXE_NAME} ${Boost_LIBRARIES})
	if (MSVC)
	    target_link_libraries(${EXE_NAME} glew_s)
	else()
	    set_target_properties(${EXE_NAME} PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
	endif()

	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES FOLDER "Tools")
ENDMACRO(SETUP_TOOL)

add_subdirectory(./ShaderCompiler)
add_subdirectory(./ModelConverter)