# aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
# SETUP_TEST(TestFishGUI)
# target_link_libraries(Test yaml-cpp)
# include_directories( ${CMAKE_CURRENT_LIST_DIR}/../../../../Include/FishGUI/)
# target_link_libraries(TestFishGUI FishGUI)

SET(FishGUI_DIR ${CMAKE_CURRENT_LIST_DIR}/../../../../../FishGUI)
SET(FishGUI_INCLUDE_DIR ${FishGUI_DIR}/include)
include_directories( ${FishGUI_INCLUDE_DIR} )

SET(NANO_VG_ROOT_DIR ${FishGUI_DIR}/ThirdParty/nanovg)
include_directories( ${NANO_VG_ROOT_DIR} )

if (NOT APPLE)
    # glew
    set(BUILD_UTILS OFF CACHE BOOL "" FORCE)
    ADD_SUBDIRECTORY(./ThirdParty/glew/build/cmake)
    include_directories(./ThirdParty/glew/include)
    SET_TARGET_PROPERTIES(glew PROPERTIES FOLDER "ThirdParty")
    SET_TARGET_PROPERTIES(glew_s PROPERTIES FOLDER "ThirdParty")
endif()

# # glfw
# set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
# set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
# set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
# set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
# set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
# ADD_SUBDIRECTORY(./ThirdParty/glfw/)
# SET_TARGET_PROPERTIES(glfw PROPERTIES FOLDER "ThirdParty")

if (APPLE)
    file( GLOB FONTS ${FishGUI_DIR}/resources/fonts/*.ttf)
    set( RESOURCES ${FONTS} )
    # set_source_files_properties(TestFishGUI PROPERTIES MACOSX_PACKAGE_LOCATION fonts)
endif()

FILE(GLOB_RECURSE EXAMPLES_COMMON ${FishGUI_DIR}/examples/common/*.hpp ${FishGUI_DIR}/examples/common/*.cpp)
FILE(GLOB_RECURSE DEMO_SRC ${FishGUI_DIR}/examples/demo1/*)
add_executable(TestFishGUI MACOSX_BUNDLE ${DEMO_SRC} ${EXAMPLES_COMMON} ${RESOURCES})
set_target_properties(TestFishGUI PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${FishGUI_DIR}/cmake/MacOSXBundleInfo.plist.in)

source_group("common" FILES ${EXAMPLES_COMMON})
source_group("Resources" FILES ${RESOURCES})

target_link_libraries(TestFishGUI glfw FishGUI)
target_link_libraries(TestFishGUI ${Boost_LIBRARIES})

if (WIN32)
    target_link_libraries(TestFishGUI opengl32.lib)
    target_link_libraries(TestFishGUI glew_s)
endif()
if (APPLE)
    set_target_properties(TestFishGUI PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
    # file( GLOB FONTS ${CMAKE_CURRENT_LIST_DIR}/resources/fonts/*.ttf)
    set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources/fonts)
endif()
if (LINUX)
    SET(CMAKE_BUILD_TYPE "Debug")  
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
    target_link_libraries(TestFishGUI glew_s)
endif()