aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
add_executable (ModelConverter ${SRCS})
target_link_libraries(ModelConverter FishEngine)
target_link_libraries(ModelConverter glfw)
target_link_libraries(ModelConverter assimp)
target_link_libraries(ModelConverter ${PhysXSDK_LIBRARIES})
target_link_libraries(ModelConverter ${Boost_LIBRARIES})
if (MSVC)
    target_link_libraries(ModelConverter glew_s)
else()
    set_target_properties(ModelConverter PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
endif()