aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SRCS)
add_executable (ShaderCompiler ${SRCS})
target_link_libraries(ShaderCompiler FishEngine)
target_link_libraries(ShaderCompiler glfw)
target_link_libraries(ShaderCompiler assimp)
target_link_libraries(ShaderCompiler ${PhysXSDK_LIBRARIES})
target_link_libraries(ShaderCompiler ${Boost_LIBRARIES})
if (MSVC)
    target_link_libraries(ShaderCompiler glew_s)
else()
    set_target_properties(ShaderCompiler PROPERTIES LINK_FLAGS "-framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo")
endif()